--- a/praca/style.css
+++ b/praca/style.css
@@ -16,3 +16,16 @@ header{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 15px;
 }
+ .logo {
+            width: 100px;
+            height: 100px;
+            background-image: url('/images/icon.jpg');
+            background-size: cover;
+        }
+        .button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
