--- a/praca/style.css
+++ b/praca/style.css
@@ -12,10 +12,11 @@ header{
 }
 
 .logo {
-            width: 100px;
-            height: 100px;
+            width: 50px;
+            height: 50px;
             background-image: url('/images/icon.jpg');
             background-size: cover;
+            float: left;
 }
 
 .button {
@@ -24,6 +25,7 @@ header{
             color: white;
             border: none;
             cursor: pointer;
+            float: right;
 }
 
 
