--- a/praca/style.css
+++ b/praca/style.css
@@ -34,6 +34,7 @@ header span.right{
     float: right;
     color: black;
     padding-right: 15px;
+}
 .logo {
             width: 50px;
             height: 50px;
