--- a/praca/style.css
+++ b/praca/style.css
@@ -11,12 +11,6 @@ header{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-header span.left{
-    float: left;
-    color: orange;
-    padding-left: 15px;
-}
-
 .logo {
     width: 100px;
     height: 100px;
@@ -28,26 +22,5 @@ header span.left{
     background-color: #007bff;
     color: white;
     border: none;
-    cursor: pointer;
+    cursor: pointer chuj;
 }
-header span.right{
-    float: right;
-    color: black;
-    padding-right: 15px;
-.logo {
-            width: 50px;
-            height: 50px;
-            background-image: url('/images/icon.jpg');
-            background-size: cover;
-            float: left;
-}
-
-.button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-            float: right;
-}
-
