--- a/praca/style.css
+++ b/praca/style.css
@@ -12,16 +12,11 @@ header{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.logo {
-    width: 100px;
-    height: 100px;
-    background-image: url('i');
-    background-size: cover;
-}
 .button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer chuj 2137;
+background: none;
+color: orange;
+float: left;
+padding-left: 20px;
+border: none;
+cursor: pointer;
 }
