--- a/praca/style.css
+++ b/praca/style.css
@@ -19,4 +19,30 @@ footer{
     width: 100%;
     font-size: 30px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    justify-content: space-between;
+    display: flex;
+    padding: 20px;
+
+
+
+}
+
+.footer-segment {
+    flex: 1;
+    margin-right: 20px;
+}
+
+.footer-segment:last-child {
+    margin-right: 0;
+}
+
+.footer-subsegment {
+    margin-bottom: 20px;
+}
+
+.footer-subsegment:last-child {
+    margin-bottom: 0;
+}
+h3{
+    font-size: medium;
 }
