--- a/praca/style.css
+++ b/praca/style.css
@@ -14,7 +14,7 @@ header{
 }
 
 footer{
-    background: linear-gradient(to right, black -10%, rgb(194, 88, 1));
+    background: linear-gradient(to left, black -10%, rgb(194, 88, 1));
     height: 150px;
     width: 100%;
     font-size: 30px;
