--- a/praca/style.css
+++ b/praca/style.css
@@ -7,7 +7,7 @@ body {
 header{
     background: linear-gradient(to right, black -10%, rgb(194, 88, 1));
     height: 75px;
-    width: 100%;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +20,7 @@ header{
 footer{
     background: linear-gradient(to left, black -10%, rgb(194, 88, 1));
     height: 200px;
-    width: 100%;
+    width: auto;
     font-size: 30px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content: space-between;
