--- a/praca/style.css
+++ b/praca/style.css
@@ -5,7 +5,7 @@ body {
   
 
 header{
-    background: linear-gradient(to right, black -10%, rgb(194, 88, 1));
+    background: linear-gradient(to right, black -10%, rgb(36, 36, 36));
     height: 75px;
     width: auto;
     display: flex;
@@ -18,13 +18,14 @@ header{
 }
 
 footer{
-    background: linear-gradient(to left, black -10%, rgb(194, 88, 1));
+    background: linear-gradient(to left, black -10%, rgb(36, 36, 36));
     height: 200px;
     width: auto;
     font-size: 30px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content: space-between;
     display: flex;
+    color: rgb(197, 197, 197);
 }
 
 .footer-segment {
