--- a/praca/style.css
+++ b/praca/style.css
@@ -5,7 +5,7 @@ body {
   
 
 header{
-    background: linear-gradient(to right, black -10%, rgb(35, 35, 35));
+    background: linear-gradient(to right, rgb(22, 22, 22) -10%, rgb(35, 35, 35));
     height: 75px;
     width: auto;
     display: flex;
@@ -18,7 +18,7 @@ header{
 }
 
 footer{
-    background: linear-gradient(to right, black -10%, rgb(35, 35, 35));
+    background: linear-gradient(to right, rgb(22, 22, 22) -10%, rgb(35, 35, 35));
     height: 200px;
     width: auto;
     font-size: 30px;
