--- a/praca/style.css
+++ b/praca/style.css
@@ -1,4 +1,4 @@
-body {
+* {
     margin: 0;
     padding: 0
   }
@@ -11,10 +11,6 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.blok{
-    height: 873px;
 }
 
 footer{
@@ -51,6 +47,15 @@ footer{
     margin-bottom: 0;
     margin-left: 20px;
 }
+
 h3{
     font-size: medium;
+}
+
+.blok{
+    width: auto;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(./images/banner.jpg);
+    background-size: cover;
+    background-position: center;
 }
