--- a/praca/style.css
+++ b/praca/style.css
@@ -5,12 +5,12 @@
   
 
 header{
-    background: linear-gradient(to right, rgb(22, 22, 22) -10%, rgb(35, 35, 35));
     height: 75px;
-    width: auto;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
 }
 
 footer{
