--- a/praca/sprzedaje.css
+++ b/praca/sprzedaje.css
@@ -55,3 +55,48 @@ h3{
     background-size: cover;
     background-position: center;
 }
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    background-color: #f2f2f2;
+}
+
+.button {
+    
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+}
+
+.button:hover {
+    background-color: #3e8e41;
+}
+
+.button img {
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
+}
+
+.button:first-child {
+    position: absolute;
+    left: 0;
+}
+
+.button:last-child {
+    position: absolute;
+    right: 0;
+}
