--- a/praca/kupuje.css
+++ b/praca/kupuje.css
@@ -79,10 +79,12 @@ h3{
     cursor: pointer;
     border: none;
     border-radius: 4px;
+    width: 150px;
+    position: absolute;
 }
 
 .button:hover {
-    background-color: #3e8e41;
+    background-color: #daa208;
 }
 
 .button img {
@@ -99,4 +101,7 @@ h3{
 .button:last-child {
     position: absolute;
     right: 0;
+}
+.button-center{
+  position: center;
 }
