--- a/praca/kupuje.css
+++ b/praca/kupuje.css
@@ -55,53 +55,84 @@ h3{
     background-size: cover;
     background-position: center;
 }
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 10px;
-    background-color: #f2f2f2;
-}
 
-.button {
-    
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    width: 150px;
-    position: absolute;
-}
-
-.button:hover {
-    background-color: #daa208;
-}
-
-.button img {
-    width: 60px;
-    height: 60px;
-    object-fit: contain;
-}
-
-.button:first-child {
-    position: absolute;
-    left: 0;
-}
-
-.button:last-child {
-    position: absolute;
-    right: 0;
-}
 .button-center{
   position: center;
 }
+
+.button1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: none;
+    color: white;
+    text-decoration: none;
+    transition: color 0.5s; 
+    animation: changeColorBack 0.5s; 
+    animation-fill-mode: forwards;
+}
+
+.button1:hover{
+    color: orange;
+    transition: color 0.5s; 
+    animation: changeColor 0.5s; 
+    animation-fill-mode: forwards;
+}
+
+.button1::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background-color: orange;
+    width: 0%;
+    bottom: -2px;
+    left: 100;
+    transition: width 0.5s;
+}
+
+.button1:hover::before {
+    width: 83px;
+}
+
+.button2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: none;
+    color: white;
+    text-decoration: none;
+    transition: color 0.5s; 
+    animation: changeColorBack 0.5s; 
+    animation-fill-mode: forwards;
+}
+
+.button2:hover{
+    color: orange;
+    transition: color 0.5s; 
+    animation: changeColor 0.5s; 
+    animation-fill-mode: forwards;
+}
+
+
+
+.button2::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background-color: orange;
+    width: 0%;
+    bottom: -2px;
+    right: 100;
+    transition: width 0.5s;
+}
+
+.button2:hover::before {
+    width: 56px;
+}
+
+@keyframes changeColor {
+    0% { color: white; }
+    100% { color: orange; }
+}
+
+@keyframes changeColorBack {
+    0% { color: orange; }
+    100% { color: white; }
+}
+
