--- a/praca/kupuje.css
+++ b/praca/kupuje.css
@@ -48,7 +48,7 @@ h3{
     font-size: medium;
 }
 
-.blok{
+.banner{
     width: auto;
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(./images/banner.jpg);
@@ -62,12 +62,14 @@ h3{
 
 .button1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background: none;
-    color: white;
+    display: inline-block;
+    position: relative;
+    padding: 10px 20px;
+    margin: 10px;
     text-decoration: none;
-    transition: color 0.5s; 
-    animation: changeColorBack 0.5s; 
-    animation-fill-mode: forwards;
+    color: white;
+    transition: all 0.3s ease;
+    vertical-align: middle;
 }
 
 .button1:hover{
@@ -83,7 +85,7 @@ h3{
     height: 2px;
     background-color: orange;
     width: 0%;
-    bottom: -2px;
+    bottom: 0;
     left: 100;
     transition: width 0.5s;
 }
@@ -94,12 +96,14 @@ h3{
 
 .button2{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background: none;
-    color: white;
+    display: inline-block;
+    position: relative;
+    padding: 10px 20px;
+    margin: 10px;
     text-decoration: none;
-    transition: color 0.5s; 
-    animation: changeColorBack 0.5s; 
-    animation-fill-mode: forwards;
+    color: white;
+    transition: all 0.3s ease;
+    vertical-align: middle;
 }
 
 .button2:hover{
@@ -124,6 +128,10 @@ h3{
 
 .button2:hover::before {
     width: 56px;
+}
+
+.blok{
+    
 }
 
 @keyframes changeColor {
