--- a/praca/sprzedaje.css
+++ b/praca/sprzedaje.css
@@ -7,9 +7,6 @@
 header{
     height: 75px;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: absolute;
 }
 
@@ -48,60 +45,121 @@ h3{
     font-size: medium;
 }
 
-.blok{
+.banner{
     width: auto;
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(./images/banner.jpg);
     background-size: cover;
     background-position: center;
-}
-.button-container {
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 10px;
-    background-color: #f2f2f2;
+    justify-content: center;
+    display: flex;
 }
 
-.button {
-    
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    width: 150px;
-    position: absolute;
-}
-
-.button:hover {
-    background-color: #daa208;
-}
-
-.button img {
-    width: 60px;
-    height: 60px;
-    object-fit: contain;
-}
-
-.button:first-child {
-    position: absolute;
-    left: 0;
-}
-
-.button:last-child {
-    position: absolute;
-    right: 0;
-}
 .button-center{
-  position: center;
+    position: absolute;
+    margin-top: -100px;
+    left: 50%;
+    transform: translateX(-50%);
 }
+
+.button1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: inline-block;
+    position: absolute;
+    padding: 10px 20px;
+    margin: 20px;
+    margin-left: 200px;
+    text-decoration: none;
+    color: white;
+    transition: all 0.3s ease;
+    vertical-align: middle;
+    animation: changeColorBack 0.5s; 
+    animation-fill-mode: forwards;
+}
+
+.button1:hover{
+    color: orange;
+    transition: color 0.5s; 
+    animation: changeColor 0.5s; 
+    animation-fill-mode: forwards;
+}
+
+.button1::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background-color: orange;
+    width: 0%;
+    bottom: 0;
+    left: 100;
+    transition: width 0.5s;
+}
+
+.button1:hover::before {
+    width: 83px;
+}
+
+.button2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: inline-block;
+    position: absolute;
+    padding: 10px 20px;
+    margin: 20px;
+    margin-right: 200px;
+    text-decoration: none;
+    color: orange;
+    transition: all 0.3s ease;
+    vertical-align: middle;
+    right: 0;
+    animation: changeColorBack 0.5s; 
+    animation-fill-mode: forwards;
+}
+
+.button2:hover{
+    color: orange;
+    transition: color 0.5s; 
+    animation: changeColor 0.5s; 
+    animation-fill-mode: forwards;
+}
+
+.button2::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background-color: orange;
+    width: 0%;
+    bottom: -2px;
+    right: 100;
+    transition: width 0.5s;
+}
+
+.button2:hover::before {
+    width: 56px;
+}
+
+.blok{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 25%;
+    border-style: solid;
+    border-radius: 20px;
+    border-color: orange;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 36px;
+    padding: 30px;
+}
+
+@keyframes changeColor {
+    0% { color: white; }
+    100% { color: orange; }
+}
+
+@keyframes changeColorBack {
+    0% { color: orange; }
+    100% { color: white; }
+}
+
