--- a/praca/style.css
+++ b/praca/style.css
@@ -13,6 +13,10 @@ header{
     position: absolute;
 }
 
+.img{
+    margin-top: 25px;
+}
+
 footer{
     background: linear-gradient(to right, rgb(22, 22, 22) -10%, rgb(35, 35, 35));
     min-height: 200px;
