--- a/praca/kupuje.css
+++ b/praca/kupuje.css
@@ -137,7 +137,7 @@ h3{
     border-color: orange;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 36px;
+    font-size: 2vw;
     padding: 30px;
 }
 
