--- a/praca/style.css
+++ b/praca/style.css
@@ -55,3 +55,18 @@ h3{
     background-size: cover;
     background-position: center;
 }
+table{
+    border-style: dotted;
+    border-color: darkorange;
+    height: 20%;
+    width:20%;
+    border-collapse: collapse;
+    border: 5px;
+}
+td,tr{
+    border-style: dotted;
+    padding: 8px;
+    border-color: orange;
+    
+    
+}
