--- a/praca/style.css
+++ b/praca/style.css
@@ -4,7 +4,7 @@
   }
   
 
-header{
+aaheader{
     height: 75px;
     width: 100%;
     display: flex;
@@ -14,7 +14,10 @@ header{
 }
 
 .img{
-    margin-top: 25px;
+    position: absolute;
+    margin-top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 footer{
@@ -58,28 +61,9 @@ h3{
     background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(./images/banner.jpg);
     background-size: cover;
     background-position: center;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
-/*
-table{
-    border-style: dotted;
-    border-color: darkorange;
-    height: 20%;
-    width:20%;
-    border-collapse: collapse;
-    border: 5px;
+    position: relative;
 }
 
-td,tr{
-    border-style: dotted;
-    padding: 8px;
-    border-color: orange;
-    
-    
-}
-*/
 .blok{
     position: relative;
     display: flex;
@@ -92,6 +76,10 @@ td,tr{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2vw;
     padding: 30px;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    top: 30%;
 }
 
 .button-left{
