--- a/praca/sprzedaje.css
+++ b/praca/sprzedaje.css
@@ -144,3 +144,17 @@ h3{
     100% { color: white; }
 }
 
+@media only screen and (max-width: 768px) {
+    [class*="button1"]{
+        font-size: 1em;
+        position: absolute;
+        margin-top: 6em;
+      }
+
+      [class*="button2"]{
+        font-size: 1em;
+        position: absolute;
+        margin-top: 6em;
+        transform: translateX(-50%);
+      }
+    }
