--- a/praca/kupuje.css
+++ b/praca/kupuje.css
@@ -12,26 +12,30 @@ footer{
     justify-content: space-between;
     display: flex;
     color: rgb(197, 197, 197);
-    overflow: auto;
+    flex-wrap: wrap;
 }
 
 .footer-segment:first-child {
     margin-right: 20px;
+    flex-basis: 48%;
 }
 
 .footer-segment:last-child {
-    margin-right: 200px;
+    margin-right: 20px;
+    flex-basis: 48%;
 }
 
 .footer-subsegment:first-child {
     margin-bottom: 20px;
     margin-top: 20px;
     margin-left: 20px;
+    flex-basis: 100%
 }
 
 .footer-subsegment:last-child {
     margin-bottom: 0;
     margin-left: 20px;
+    flex-basis: 100%
 }
 
 h3{
@@ -130,7 +134,7 @@ h3{
     border-color: orange;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 4vw;
+    font-size: 2vw;
     padding: 30px;
 }
 
@@ -157,4 +161,10 @@ h3{
         margin-top: 6em;
         transform: translateX(-50%);
       }
+
+      [class*="blok"]{
+        font-size: 4vw;
+      }
     }
+
+    
