--- a/praca/style.css
+++ b/praca/style.css
@@ -29,26 +29,43 @@ footer{
     justify-content: space-between;
     display: flex;
     color: rgb(197, 197, 197);
-    overflow: auto;
+    flex-wrap: wrap;
+    position: relative;
 }
 
 .footer-segment:first-child {
-    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    flex-basis: 48%;
 }
 
 .footer-segment:last-child {
-    margin-right: 200px;
+    top: 20px;
+    bottom: 20px;
+    flex-basis: 48%;
+    position: absolute;
+    right: 50px;
+}
+.footer-segmentmid {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    flex-basis: 48%;
 }
 
 .footer-subsegment:first-child {
     margin-bottom: 20px;
     margin-top: 20px;
     margin-left: 20px;
+    flex-basis: 100%;
 }
 
 .footer-subsegment:last-child {
-    margin-bottom: 0;
+    margin-bottom: 20px;
+    margin-top: 20px;
     margin-left: 20px;
+    flex-basis: 100%;
 }
 
 h3{
@@ -145,8 +162,15 @@ h3{
   }
 }
 
+@media only screen and (min-width: 768px) {
+    [class*="footer-segmentmid"]{
+            position: absolute;
+            transform: translateX(-50%);
+            left: 50%;
+          }
+    }
+    
 @keyframes changeColor {
     0% { background-color: none; }
     100% { background-color: orange; }
 }
-
