--- a/praca/kupuje.css
+++ b/praca/kupuje.css
@@ -100,22 +100,22 @@ h3{
 .dropdown-content {
     display: none;
     position: relative;
-    background-color: rgba(255, 115, 0, 0.15);
+    background-color: rgba(255, 174, 0, 0.15);
     border-radius: 10px;
     text-decoration: none;
     min-width: 2em;
     font-size: 1.2em;
     padding: 12px 16px;
+    margin-top: 10px;
     z-index: 1;
     }
 
 .dropdown-content:hover{
-    background-color: ;
+    background-color: rgba(255, 174, 0, 0.1);
 }
       
 .dropdown:hover .dropdown-content {
     display: block;
-    animation-name: fadeIN;
     animation-name: slideIN;
     animation-duration: 0.5s;
     animation-timing-function: ease;
@@ -123,9 +123,13 @@ h3{
     animation-direction: normal;
     }
 
+.button2{
+    color: orange;
+}
+
 @keyframes slideIN {
-        0% { right: 0;}
-        100% { right: 20px}
+        0% { right: 0; opacity: 0;}
+        100% { right: 20px; opacity: 1;}
       }
 
 @keyframes fadeIN {
