--- a/praca/style.css
+++ b/praca/style.css
@@ -171,7 +171,7 @@ h3 {
     justify-content: center;
 }
 
-.button-left:hover {
+.button-center:hover {
     transition: background-color 0.5s;
     animation: changeColor 0.5s;
     animation-fill-mode: forwards;
