--- a/praca/kupuje.css
+++ b/praca/kupuje.css
@@ -151,15 +151,26 @@ h3 {
 }
 
 @media only screen and (max-width: 768px) {
-    [class*="blok"] {
+    [class="blok"] {
         font-size: 4vw;
     }
-}
 
-@media only screen and (min-width: 768px) {
-    [class*="footer-segmentmid"] {
+    [class="footer-segmentmid"] {
         position: absolute;
         transform: translateX(-50%);
         left: 50%;
+    }
+
+    [class="dropdown"] {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+
+    [class="button-center"] {
+        transform: translateX(0%);
+        position: absolute;
+        left: 10px;
+        top: 10px;
     }
 }
