--- a/praca/hostel.css
+++ b/praca/hostel.css
@@ -156,9 +156,9 @@ h3 {
     }
 
     [class="footer-segmentmid"] {
-        position: absolute;
+        position: relative;
         transform: translateX(-50%);
-        left: 50%;
+        left: 30%;
     }
 
     [class="dropdown"] {
