--- a/praca/style.css
+++ b/praca/style.css
@@ -190,19 +190,15 @@ h3 {
         height: 0.8em;
 
     }
-}
 
-@media only screen and (max-width: 768px) {
     [class*="custom-h1"] {
         font-size: 1.6em;
     }
-}
 
-@media only screen and (min-width: 768px) {
-    [class*="footer-segmentmid"] {
-        position: absolute;
+    [class="footer-segmentmid"] {
+        position: relative;
         transform: translateX(-50%);
-        left: 50%;
+        left: 30%;
     }
 }
 
