--- a/praca/style.css
+++ b/praca/style.css
@@ -1,6 +1,9 @@
 * {
     margin: 0;
-    padding: 0
+    padding: 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(197, 197, 197);
+    text-decoration: none;
 }
 
 
@@ -25,7 +28,6 @@ footer {
     min-height: 200px;
     width: auto;
     font-size: 30px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content: space-between;
     display: flex;
     color: rgb(197, 197, 197);
@@ -72,6 +74,7 @@ footer {
 h3 {
     font-size: medium;
 }
+
 
 .banner {
     width: auto;
