--- a/praca/kupuje.css
+++ b/praca/kupuje.css
@@ -60,8 +60,8 @@ h3 {
 
 .banner {
     width: auto;
-    height: 100vh;
-background-color: black;
+    min-height: 60em;
+    background-color: black;
     background-size: cover;
     background-position: center;
     align-items: center;
