--- a/praca/style.css
+++ b/praca/style.css
@@ -217,9 +217,10 @@ h3 {
         transform: translateX(-50%);
         left: 30%;
     }
-
-    [footer] {
-        nav-down: auto;
+    
+    [class="button-1"] {
+        margin-left: 0.8em;
+        margin-bottom: 1em;
     }
 }
 
@@ -237,6 +238,4 @@ h3 {
 .button-1{
     width: 7em; 
     height: 7em;
-    margin-left: 0.8em;
-    margin-bottom: 1em;
 }
